--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,18 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+
+    ext.support_version = '27.1.1'
     ext.kotlin_version = '1.2.41'
+    ext.dagger_version = '2.16'
+    ext.reftrofit_version = '2.4.0'
+    ext.rx_version = '2.0.2'
+    ext.espresso_version = '3.0.2'
+
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
@@ -19,6 +27,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
