--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ buildscript {
     ext.reftrofit_version = '2.4.0'
     ext.rx_version = '2.0.2'
     ext.espresso_version = '3.0.2'
+    ext.mockito_version = '2.8.47'
+
 
     repositories {
         google()
